# lead-scout-oss

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  SPEC.md  pyproject.toml
.claude/: settings.json
config/: enrichment.example.yaml  hard_stops.yaml  rubric.md
deploy/: com.posthog.lead-agent.agent.plist  com.posthog.lead-agent.fast.plist  com.posthog.lead-agent.followups.plist  com.posthog.lead-agent.nightly.plist  com.posthog.lead-agent.slow.plist
engine/: adapters.py  agent_runtime.py  anthropic_model.py  bootstrap.py  clay.py  configure.py  cost.py  enrichment.py  env.py  factcheck.py  gmail.py  gmail_api.py  gmail_login.py  hardstops.py  ledger.py  loop_fast.py  loop_slow.py  providers.py  router.py  salesforce.py  service.py  sf_auth.py  sf_cli.py  sf_login.py  shell.py  slack.py  slack_api.py  usage.py
fixtures/: world.json
qualifiers/: plg_base.py  registry.yaml
scripts/: install_jobs.sh  run_followups.sh  run_nightly.sh  run_sweep.sh  setup.sh
shared/: agentic.py  conformance.py  contracts.py  model.py  qualifier.py  registry.py  signals.py  skills.py
tests/: test_agent_runtime.py  test_agentic.py  test_bootstrap.py  test_clay.py  test_configure.py  test_conformance.py  test_contracts.py  test_cost.py  test_end_to_end.py  test_enrichment.py  test_factcheck.py  test_followup.py  test_followup_draft.py  test_gmail.py  test_gmail_api.py  test_ledger.py  test_loop.py  test_loop_slow.py  test_model_tools.py  test_qualifiers.py  test_router_hardstops.py  test_salesforce.py  test_sf_auth.py  test_sf_cli.py  test_shell.py  test_slack.py  (+3 more)
(+86 files in other folders)
