[project]
name = "lead-agent"
version = "0.1.0"
description = "Headless qualifier-orchestrated lead outreach agent. Stages drafts for human review; never sends."
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "shared", "qualifiers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
